--- a/package.json
+++ b/package.json
@@ -7,5 +7,11 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "algosdk": "^1.13.0",
+    "delay": "^5.0.0",
+    "md5": "^2.3.0",
+    "ora": "^6.0.1"
+  }
 }
