--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "algosdk": "^1.13.0",
     "delay": "^5.0.0",
     "md5": "^2.3.0",
-    "ora": "^6.0.1"
+    "node-repl-await": "^0.1.2",
+    "ora": "^6.0.1",
+    "terminal-kit": "^2.4.0"
   }
 }
