--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "algosdk": "^1.13.0",
     "better-sqlite3": "^7.5.0",
+    "cli-table3": "^0.6.1",
     "delay": "^5.0.0",
     "md5": "^2.3.0",
     "node-repl-await": "^0.1.2",
