--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "better-sqlite3": "^7.5.0",
     "cli-table3": "^0.6.1",
     "delay": "^5.0.0",
+    "fast-glob": "^3.2.11",
     "md5": "^2.3.0",
     "node-repl-await": "^0.1.2",
     "ora": "^6.0.1",
